# windows

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  asconfig.json  changelog.md  docs.html  index-spotify.html  index.html  nex-music.html  package-lock.json  package.json  postcss.config.js  railway.toml  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
api/: og-image.js  og-nex-music.js  playlist-share.js  socket.ts  spotify-auth.js  spotify-callback.js  spotify-playlist.js  spotify-session.js
api/groq/: chat.js  health.js  models.js
api/spotify/: playlist.js  playlist.ts  search.js  search.ts
api/youtube/: search.ts
assembly/: index.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  RUNTIME.md  SDK.md  TROUBLESHOOTING.md  WASM_BRIDGE.md  hermes.md
lib/: spotifyToken.ts
public/: process_utils.d.ts  process_utils.js  process_utils.wasm  process_utils.wasm.map
server/: Dockerfile  README.md  fly.toml  index.js  package-lock.json  package.json  stream.js
src/: App.tsx  global.d.ts  index.css  main-spotify.tsx  main.tsx  vite-env.d.ts
src/community-apps/: HelloNex.tsx  HelloNexApp.tsx  SdkDocs.tsx  SdkDocsApp.tsx  index.ts
src/components/: AppRegistry.tsx  CalendarMenu.tsx  ContextMenu.tsx  Desktop.tsx  NotificationsMenu.tsx  (+4 more)
supabase/: VERIFIED.md  enable-realtime.sql  schema-playlist-shares.sql  schema-profiles-v4.sql  schema-social-v3.sql  schema-staff-verify-v5.sql  schema-v2.sql  schema.sql
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
(+153 files in other folders)
