[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust/WASM engine for Windows 11 Simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"       # Optimize for size
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
wasm-bindgen-test = "0.3"
